@@ -16,8 +16,6 @@ CC=$(TARGET)-gcc
 STRIP=$(TARGET)-strip
 WINDRES=$(TARGET)-windres
 
-THE_SYSTEM_LIBS?="-lcegcc -lcoredll"
-
 LIB_PATH=$(PREFIX)/$(TARGET)/lib
 
 LDFLAGS += -Wl,-Map,${MY_DIR}/$(DLLNAME).map
@@ -56,19 +54,6 @@ ${MY_DIR}/stripped/$(DLLNAME):
 	$(STRIP) ${MY_DIR}/$(DLLNAME)-stripped.dll
 	@mv -vf ${MY_DIR}/$(DLLNAME)-stripped.dll ${MY_DIR}/stripped/$(DLLNAME)
 
-# ${MY_DIR}/$(DLLNAME).a \
-# ${MY_DIR}/$(DLLNAME).def \
-# ${MY_DIR}/$(DLLNAME):
-# 	$(CC) $(LDFLAGS) -shared \
-# 		-Wl,--enable-auto-import \
-# 		-Wl,--enable-runtime-pseudo-reloc \
-# 		-Wl,--export-all-symbols \
-# 		-o ${MY_DIR}/$(DLLNAME) \
-# 		-Wl,--out-implib,${MY_DIR}/$(DLLNAME).a \
-# 		-Wl,--output-def,${MY_DIR}/$(DLLNAME).def \
-# 		-Wl,--whole-archive ${MY_DIR}/_tmp/*.o \
-# 		-Wl,-no-whole-archive -lcegcc -lcoredll
-
 ${MY_DIR}/$(DLLNAME).a \
 ${MY_DIR}/$(DLLNAME).def \
 ${MY_DIR}/$(DLLNAME):
@@ -80,7 +65,7 @@ ${MY_DIR}/$(DLLNAME):
 		-Wl,--out-implib,${MY_DIR}/$(DLLNAME).a \
 		-Wl,--output-def,${MY_DIR}/$(DLLNAME).def \
 		-Wl,--whole-archive ${MY_DIR}/_tmp/*.o \
-		-Wl,-no-whole-archive ${THE_SYSTEM_LIBS}
+		-Wl,-no-whole-archive -lcegcc -lcoredll
 
 
 installdll: ${MY_DIR}/stripped/$(DLLNAME)
